--- a/OutlineOperations/OutlineOperations.csproj
+++ b/OutlineOperations/OutlineOperations.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\AvailMem\AvailMem.vbproj" />
     <ProjectReference Include="..\Cache\Cache.vbproj" />
     <ProjectReference Include="..\ChainCodeFinder\ChainCodeFinder.vbproj" />
+    <ProjectReference Include="..\ColorCurvesAlpha\ColorCurvesAlpha.vbproj" />
     <ProjectReference Include="..\ConvolutionLib\ConvolutionLib.vbproj" />
     <ProjectReference Include="..\HelplineRulerControl\HelplineRulerControl.vbproj" />
     <ProjectReference Include="..\MorphologicalProcessing2\MorphologicalProcessing2.csproj" />
